--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.taptake" >
+    package="com.example.taptake">
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TapTake" >
+        android:theme="@style/Theme.TapTake">
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".SingUp"
+            android:exported="false" />
         <activity
             android:name=".HomeScreen"
             android:exported="false"
@@ -15,7 +21,7 @@
             android:theme="@style/Theme.TapTake.NoActionBar" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
