onClick CardView test, change variables, color, name, email, photograph

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:name=".Login"
             android:exported="false" />
         <activity
-            android:name=".SingUp"
+            android:name=".SignUp"
             android:exported="false" />
         <activity
             android:name=".HomeScreen"
