--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TapTake">
         <activity
+            android:name=".RestaurantScreen"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
