--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,25 @@
         android:theme="@style/Theme.TapTake">
         <activity
             android:name=".RestaurantScreen"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".Login"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".SignUp"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".HomeScreen"
+            android:launchMode="singleTask"
             android:exported="false"
             android:label="@string/title_activity_home_screen"
             android:theme="@style/Theme.TapTake.NoActionBar" />
         <activity
             android:name=".SplashScreen"
+            android:launchMode="singleTask"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
