fixing CardView on HomeScreen and Universities Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:theme="@style/Theme.TapTake">
         <activity
             android:name=".PaymentScreen"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".SchedulingScreen"
             android:exported="false"
